Context Menu Clipping Fix

--- a/styles/components/core.scss
+++ b/styles/components/core.scss
@@ -93,6 +93,7 @@
   #context-menu {
     scale: calc(1 / var(--aat-scale));
     width: auto;
+    z-index: 100;
   }
 }
 
